k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shipt-routing
  labels:
    app.kubernetes.io/part-of: shipt-routing-engine
